[BugFix]: permits input overflow in small screens
In some small devices, it was not letting the input
number to be completely visible, fixed with overflow
property.

--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,7 @@
     }
 
     input {
+        overflow: visible;
         width: 2em;
         height: 2em;
     }
